better mobile menu

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 </div>
 
 <div class="items">
-    <a href="#one">
+    <a href="/colophon">
         <div class="item group-one">
             <img src="img1.png" class="icon-img"/>
             <div class="item-name">I am an alien.</div>
         </div>
     </a>
-    <a href="#one">
+    <a href="/colophon">
         <div class="item group-one">
             <img src="img1.png" class="icon-img"/>
             <div class="item-name">I am an alien.</div>
         </div>
     </a>
-    <a href="#one">
+    <a href="/colophon">
         <div class="item group-one">
             <img src="img1.png" class="icon-img"/>
             <div class="item-name">I am an alien.</div>
